2012-02-28 Omar A. Herrera Reyna <omar.herrera@kinakuta.com.mx>

        * webservice_interface.c filehandling.c: cleaned up and fixed some
        comments/fprintfs.

	* webservice_interface.c (cmeRAWFileToSecureFile): added
	currentFilePartPath to cmeRAWFileToSecureFileFree for consistency

	* engine_admin.c (cmeWebServiceSetup): reordered MHD_start_daemon
	parameters for clarity.

2012-02-27 Omar A. Herrera Reyna <omar.herrera@kinakuta.com.mx>

        * filehandling.c: cleaned up and fixed some comments.

	* filehandling.c (cmeSecureFileToTmpRAWFile): deleted unused
	variable resultMemTable. Solved TODO; added orgResourceId and
	storageId checks and corresponding parameters.

	* filehandling.h (cmeSecureFileToTmpRAWFile cmeCSVFileToSecureDB):
	adjusted function call parameters.

	* webservice_interface.c (cmeWebServiceProcessContentClass):
	adjusted function call parameters for cmeSecureFileToTmpRAWFile.

	* db.c db.h engine_admin.c engine_interface.c filehandling.c
	webservice_interface.c function_test.c (cmeMemTable cmeSQLRows
	cmeCSVFileToSecureDB): replaced pErrmsg/errMsg parameter with local
	variable.  SQLite3 Error msg handling will be done only within
	cmeMemTable function.

2012-02-24 Omar A. Herrera Reyna <omar.herrera@kinakuta.com.mx>

	* perl_interpreter.c (cmePerlParserCmdLineInit,
	cmePerlParserInstruction): Disabled deallocation and reallocation
	procedure for Perl interpreter on each execution to fix problems
	with some Perl instances.

	* config.log: deleted from distribution.

	* configure.ac (GENERAL_CFLAGS RELEASE_CFLAGS DEBUG_CFLAGS): deleted
	manual optimization flags.  We'll go with the defaults (user can
	override them with configure script anyway).

	* configure.ac (echo): changed order of compiler paramters in
	configure result printout, to reflect actual order and added
	environment CFLAGS.

2012-02-23 Omar A. Herrera Reyna <omar.herrera@kinakuta.com.mx>

	* README: Reformatted some paragraphs, corrected some spelling